@@ -1,3 +1,11 @@
+2018-07-21  Dirk Eddelbuettel  <edd@debian.org>
+
+	* vignettes/Rcpp.bib: Updated other references
+	* inst/bib/Rcpp.bib: Idem
+
+	* inst/unitTests/runit.sugar.R: Additional unit tests
+	* inst/unitTests/cpp/sugar.cpp: Idem
+
 2018-07-20  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/include/Rcpp/sugar/functions/max.h (Rcpp): Also consider case
